smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/missing-rest-of-with-word.smithy
// Syntax error at line 5, column 15: Expected LBRACE('{') but found IDENTIFIER('wit') | Model
$version: "2"
namespace com.foo

structure Foo wit [Baz] {}
